# ethical_handset

./: pyproject.toml  requirements.txt
ethical_handset/: main.py  preconnection.py  validations.py
