[tool.poetry]
name = "ethical-handset"
version = "0.1.0"
description = ""
authors = ["Urek Mazino <urekmazth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
